<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.quickeco</groupId>
    <artifactId>QuickEco</artifactId>
    <version>2.0</version>
    <packaging>jar</packaging>

    <name>QuickEco</name>
    <description>Free, open-source economy plugin with Vault, PlaceholderAPI, and a GUI balance editor.</description>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <paper.api.version>1.20.4-R0.1-SNAPSHOT</paper.api.version>
    </properties>

    <repositories>
        <repository>
            <id>papermc</id>
            <url>https://repo.papermc.io/repository/maven-public/</url>
        </repository>
        <repository>
            <id>placeholderapi</id>
            <url>https://repo.extendedclip.com/content/repositories/placeholderapi/</url>
        </repository>
        <repository>
            <id>jitpack</id>
            <url>https://jitpack.io</url>
        </repository>
    </repositories>

    <dependencies>
        <dependency>
            <groupId>io.papermc.paper</groupId>
            <artifactId>paper-api</artifactId>
            <version>${paper.api.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>me.clip</groupId>
            <artifactId>placeholderapi</artifactId>
            <version>2.11.6</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.github.MilkBowl</groupId>
            <artifactId>VaultAPI</artifactId>
            <version>1.7</version>
            <scope>provided</scope>
        </dependency>
    </dependencies>

    <build>
        <finalName>QuickEco-${project.version}</finalName>
        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <filtering>true</filtering>
            </resource>
        </resources>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.13.0</version>
                <configuration>
                    <release>17</release>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.6.0</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals><goal>shade</goal></goals>
                        <configuration>
                            <createDependencyReducedPom>false</createDependencyReducedPom>
                            <minimizeJar>false</minimizeJar>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

    <profiles>
        <profile><id>paper-1.20.4</id><properties><paper.api.version>1.20.4-R0.1-SNAPSHOT</paper.api.version></properties></profile>

        <profile><id>paper-1.21.4</id><properties><paper.api.version>1.21.4-R0.1-SNAPSHOT</paper.api.version></properties></profile>
        <profile><id>paper-1.21.5</id><properties><paper.api.version>1.21.5-R0.1-SNAPSHOT</paper.api.version></properties></profile>
        <profile><id>paper-1.21.6</id><properties><paper.api.version>1.21.6-R0.1-SNAPSHOT</paper.api.version></properties></profile>
        <profile><id>paper-1.21.7</id><properties><paper.api.version>1.21.7-R0.1-SNAPSHOT</paper.api.version></properties></profile>
        <profile><id>paper-1.21.8</id><properties><paper.api.version>1.21.8-R0.1-SNAPSHOT</paper.api.version></properties></profile>
        <profile><id>paper-26.1.1</id><properties><paper.api.version>[26.1.1.build,26.1.2.build)</paper.api.version></properties></profile>
        <profile><id>paper-26.1.2</id><properties><paper.api.version>[26.1.2.build,)</paper.api.version></properties></profile>
    </profiles>
</project>
